# aiend2end

./: .gitignore  README.md  requirements.txt
agente/: agent.py  pyproject.toml  rag.py
despliegue/: hello.py  pyproject.toml
despliegue/src/agent/: agent.py  main.py  memory.py  server.py  setup_logging.py
despliegue/src/agent/static/: index.html
observabilidad/: pyproject.toml  requirements.txt
observabilidad/docs/: README.md  plan.md
observabilidad/src/catalogo/: __main__.py  agent.py  rag.py
observabilidad/src/tests/: __main__.py  _test_agent.py  evaluaciones_unificadas.csv  frases_iniciales.csv  frases_iniciales_rapidas.txt  malsonantes.txt  malsonantes_rapidas.txt  run_test.py
rag_basico/: .gitignore  rag.py
validaciones/: .gitignore  README.md  ejemplo_ruta.md  pyproject.toml  setup.py
validaciones/src/catalogo/: agent.py  rag.py
validaciones/src/tests/: frases_iniciales.txt  frases_iniciales_rapidas.txt  malsonantes.txt  malsonantes_rapidas.txt  negative_tool_calls.txt  positive_tool_calls.csv  prompt_injection.txt  test_agent.py
